Fix for Issue 4329: Improved border overlap between dropzones.
- The top/bottom negative offsets of the block dropzones allow for the
  top/bottom borders shown when on hover to overlap, hence visualy appearing
  as one (or not changing). This was off by 1px, which this commit fixes.

--- a/editor/components/block-list/style.scss
+++ b/editor/components/block-list/style.scss
@@ -77,7 +77,7 @@
 
 	// focused block-style
 	&.is-selected:before {
- 		outline: 1px solid $light-gray-500;
+		outline: 1px solid $light-gray-500;
 	}
 
 	// give reusable blocks a dashed outline
@@ -255,7 +255,7 @@
 	& > .components-drop-zone {
 		border: none;
 		top: -4px;
-		bottom: -4px;
+		bottom: -3px;
 		margin: 0 $block-mover-padding-visible;
 		border-radius: 0;
 
